--- a/package.json
+++ b/package.json
@@ -1,23 +1,41 @@
 {
   "name": "lsf_back",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Jérôme du Camp d'Orgas",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "htmlspecialchars": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.12.0-beta.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JeromeduCampdOrgas/lsf_back.git"
+  },
+  "keywords": [
+    "\"server\"",
+    "\"http\"",
+    "\"api\"",
+    "\"rest\""
+  ],
+  "bugs": {
+    "url": "https://github.com/JeromeduCampdOrgas/lsf_back/issues"
+  },
+  "homepage": "https://github.com/JeromeduCampdOrgas/lsf_back#readme",
+  "description": ""
 }
