--- a/config/config.json
+++ b/config/config.json
@@ -8,15 +8,15 @@
   },
   "test": {
     "username": "root",
-    "password": "droopy",
-    "database": "database_test_lsf",
+    "password": null,
+    "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "droopy",
-    "database": "database_production_lsf",
+    "password": null,
+    "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
