--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "htmlspecialchars": "^1.0.5",
@@ -21,6 +22,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "password-validator": "^5.2.1",
     "sequelize": "^6.12.0-beta.3"
   },
   "repository": {
