--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^3.2.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "email-validator": "^2.0.4",
