--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+ 
+    "start":"npm start"
   },
   "author": "Jérôme du Camp d'Orgas",
   "license": "ISC",
